tests/baselines/reference/es6ModuleClassDeclaration.errors.txt
es6ModuleClassDeclaration.ts(36,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
es6ModuleClassDeclaration.ts(74,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== es6ModuleClassDeclaration.ts (2 errors) ====
    export class c {
        constructor() {
        }
        private x = 10;
        public y = 30;
        static k = 20;
        private static l = 30;
        private method1() {
        }
        public method2() {
        }
        static method3() {
        }
        private static method4() {
        }
    }
    class c2 {
        constructor() {
        }
        private x = 10;
        public y = 30;
        static k = 20;
        private static l = 30;
        private method1() {
        }
        public method2() {
        }
        static method3() {
        }
        private static method4() {
        }
    }
    new c();
    new c2();
    
    export module m1 {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class c3 {
            constructor() {
            }
            private x = 10;
            public y = 30;
            static k = 20;
            private static l = 30;
            private method1() {
            }
            public method2() {
            }
            static method3() {
            }
            private static method4() {
            }
        }
        class c4 {
            constructor() {
            }
            private x = 10;
            public y = 30;
            static k = 20;
            private static l = 30;
            private method1() {
            }
            public method2() {
            }
            static method3() {
            }
            private static method4() {
            }
        }
        new c();
        new c2();
        new c3();
        new c4();
    }
    module m2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class c3 {
            constructor() {
            }
            private x = 10;
            public y = 30;
            static k = 20;
            private static l = 30;
            private method1() {
            }
            public method2() {
            }
            static method3() {
            }
            private static method4() {
            }
        }
        class c4 {
            constructor() {
            }
            private x = 10;
            public y = 30;
            static k = 20;
            private static l = 30;
            private method1() {
            }
            public method2() {
            }
            static method3() {
            }
            private static method4() {
            }
        }
        new c();
        new c2();
        new c3();
        new c4();
        new m1.c3();
    }